# coursework3

skypro_course_3/course_work/: .gitignore
skypro_course_3/course_work/CatsGram/: pyproject.toml  settings.py
skypro_course_3/course_work/CatsGram/templates/: post.html  search.html  user-feed.html
